--- a/app/src/main/res/layout/activity_timer_page.xml
+++ b/app/src/main/res/layout/activity_timer_page.xml
@@ -37,4 +37,16 @@
         app:layout_constraintLeft_toRightOf="@id/start_timer_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/send_time_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:onClick="sendTime"
+        app:layout_constraintTop_toBottomOf="@id/timer_cm"
+        app:layout_constraintBottom_toTopOf="@id/start_timer_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
